welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:3: error: not found: value estsurBiscuit
prendBiscuit();porteBiscuit();while(!estsurBiscuit){avance();};recule();poseBiscuit();
                                     ^